feat: support login

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>无可奉告</title>
+  <title>闷声发大财</title>
 </head>
 
 <body>
