--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="icon" href="../resources/favicon.ico" />
   <link rel="apple-touch-icon" href="../resources/logo512.png" />
   <link rel="manifest" href="./manifest.webmanifest" />
   <link href="../resources/iphone5_splash.png"
